<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner_sensor"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            tools:listitem="@android:layout/simple_spinner_item" />

        <ImageButton
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/info"
            android:src="@android:drawable/ic_menu_info_details"
            android:visibility="invisible" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:listitem="@android:layout/simple_spinner_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_orient"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/orientation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/accuracy"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt_fps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/fps"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_screen_orien"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/screen_settings"
            android:src="@android:drawable/ic_menu_always_landscape_portrait"
            android:visibility="invisible" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_same_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/same_scale"
        android:visibility="invisible" />

    <me.kailai.hciproject.SensorView
        android:id="@+id/sensor_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />

</LinearLayout>